--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -20,7 +20,8 @@
         </h1>
         <a href="#" id="bus-btn" class="header-btn header-btn-active" title="Bus">B</a>
         <a href="#" id="trolley-btn" class="header-btn" title="Trolley">T</a>
-        <a href="#locate" id="locate-btn" class="header-btn" title="Locate Me">&#11095;</a>
+        <a href="#findme" id="findme-btn" class="header-btn" title="Locate me">&#x1F588;</a>
+        <a href="#locate" id="locate-btn" class="header-btn" title="Find routes near me">&#11095;</a>
     </div>
     <div id="loading" class="hide">
         Loading...
