--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="static/img/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="static/img/manifest.json">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.css" />
     <link rel="stylesheet" href="static/style.css" />
 </head>
 <body>
@@ -162,8 +162,8 @@
         <a href="#102" data-route-num="102">102</a>
     </div>
     <div id="map"></div>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.js"></script>
     <script src="static/index.js"></script>
 </body>
 </html>
