Update route links for new routes

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -35,9 +35,10 @@
         <a href="#6" data-route-num="6">6</a>
         <a href="#7" data-route-num="7">7</a>
         <a href="#8" data-route-num="8">8</a>
-        <a href="#9" data-route-num="9" class="">9</a>
+        <a href="#9" data-route-num="9">9</a>
         <a href="#12" data-route-num="12">12</a>
         <a href="#14" data-route-num="14">14</a>
+        <a href="#15B" data-route-num="15B">15B</a>
         <a href="#16" data-route-num="16">16</a>
         <a href="#17" data-route-num="17">17</a>
         <a href="#18" data-route-num="18">18</a>
@@ -57,6 +58,7 @@
         <a href="#32" data-route-num="32">32</a>
         <a href="#33" data-route-num="33">33</a>
         <a href="#35" data-route-num="35">35</a>
+        <a href="#36B" data-route-num="36B">36B</a>
         <a href="#37" data-route-num="37">37</a>
         <a href="#38" data-route-num="38">38</a>
         <a href="#39" data-route-num="39">39</a>
@@ -69,6 +71,7 @@
         <a href="#47" data-route-num="47">47</a>
         <a href="#47M" data-route-num="47M">47M</a>
         <a href="#48" data-route-num="48">48</a>
+        <a href="#49" data-route-num="49">49</a>
         <a href="#50" data-route-num="50">50</a>
         <a href="#52" data-route-num="52">52</a>
         <a href="#53" data-route-num="53">53</a>
@@ -141,22 +144,24 @@
         <a href="#205" data-route-num="205">205</a>
         <a href="#206" data-route-num="206">206</a>
         <a href="#310" data-route-num="310">310</a>
-        <a href="#G" data-route-num="G" class="">G</a>
-        <a href="#H" data-route-num="H" class="">H</a>
-        <a href="#J" data-route-num="J" class="">J</a>
-        <a href="#K" data-route-num="K" class="">K</a>
-        <a href="#L" data-route-num="L" class="">L</a>
-        <a href="#R" data-route-num="R" class="">R</a>
-        <a href="#XH" data-route-num="XH" class="">XH</a>
-        <!--  Server error fetching LUCY stops from API -->
-        <!--a href="#LUCY" data-route-num="LUCY" class="">LUCY</a-->
+        <a href="#311" data-route-num="311">311</a>
+        <a href="#BLVDDIR" data-route-num="BLVDDIR">BLVDDIR</a>
+        <a href="#G" data-route-num="G">G</a>
+        <a href="#H" data-route-num="H">H</a>
+        <a href="#XH" data-route-num="XH">XH</a>
+        <a href="#J" data-route-num="J">J</a>
+        <a href="#K" data-route-num="K">K</a>
+        <a href="#L" data-route-num="L">L</a>
+        <a href="#LUCYGO" data-route-num="LUCYGO">LUCYGO</a>
+        <a href="#LUCYGR" data-route-num="LUCYGR">LUCYGR</a>
+        <a href="#R" data-route-num="R">R</a>
     </div>
     <div id="trolley-list" class="route-list flex-100 hide" tabindex="10">
         <a href="#10" data-route-num="10">10</a>
         <a href="#11" data-route-num="11">11</a>
         <a href="#13" data-route-num="13">13</a>
         <a href="#15" data-route-num="15">15</a>
-        <a href="#34" data-route-num="34" class="">34</a>
+        <a href="#34" data-route-num="34">34</a>
         <a href="#36" data-route-num="36">36</a>
         <a href="#101" data-route-num="101">101</a>
         <a href="#102" data-route-num="102">102</a>
